--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,6 @@
 	<modules>
 		<module>tensquare_common</module>
 		<module>tensquare_base</module>
+		<module>tensquare_recruit</module>
 	</modules>
 </project>
