--- a/tensquare_recruit/src/main/resources/application.yml
+++ b/tensquare_recruit/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server: 
-  port: 9001
+  port: 9002
 spring: 
   application:  
     name: tensquare-recruit #指定服务名
   datasource:  
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/tensquare_gathering?useUnicode=true&amp;characterEncoding=UTF8
+    url: jdbc:mysql://127.0.0.1:3306/tensquare_recruit?characterEncoding=utf-8&serverTimezone=CTT
     username: root
     password: root
   jpa: 
-    database: MySQL
+    database: mysql
     show-sql: true
