--- a/tensquare_qa/src/main/resources/application.yml
+++ b/tensquare_qa/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 9001
+  port: 9003
 spring:
   application:
-    name: tensquare-base
+    name: tensquare-qa
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/tensquare_base?characterEncoding=utf-8&serverTimezone=CTT
+    url: jdbc:mysql://127.0.0.1:3306/tensquare_qa?characterEncoding=utf-8&serverTimezone=CTT
     username: root
     password: root
   jpa:
