吐槽模块上线
Signed-off-by: Lexcellent <2587936056@qq.com>

--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,6 @@
 		<module>tensquare_qa</module>
 		<module>tensquare_article</module>
 		<module>tensquare_gathering</module>
+		<module>tensquare_spit</module>
 	</modules>
 </project>
